--- a/README.org
+++ b/README.org
@@ -40,3 +40,7 @@ Install [[https://github.com/BurntSushi/ripgrep][ripgrep]] on your computer.  Th
 This package could be extended to collect all the data needed to populate the SQL database, so we can stop using =org-roam-db-sync= altogether.
 
 We "just" have to design a better regexp.  As it is, it just grabs titles and IDs, which satisfies the current purpose.  Totally replacing =org-roam-db-sync= may impose some limitations on org-roam's hackability, but perhaps that's worth it.
+
+** Thanks
+
+Inspired by conversations with [[https://github.com/rtrppl/orgrr]]'s maker :)
