--- a/README.org
+++ b/README.org
@@ -22,7 +22,7 @@ They don't look up the org-roam DB at all, and just rely on ripgrep instead.
 
 ** Setup
 
-Install [[https://github.com/BurntSushi/ripgrep][ripgrep]] on your computer.  Then add to Emacs initfiles something like (assuming you install packages with [[https://github.com/radian-software/straight.el][straight.el]]):
+Install [[https://github.com/BurntSushi/ripgrep][ripgrep]] on your computer.  Then add to Emacs initfiles something like this, assuming you install packages with [[https://github.com/radian-software/straight.el][straight.el]]:
 
 #+begin_src elisp
 (use-package quickroam
@@ -34,7 +34,6 @@ Install [[https://github.com/BurntSushi/ripgrep][ripgrep]] on your computer.  Th
 (global-set-key (kbd "<f2> i") #'quickroam-insert)
 #+end_src
 
-
 ** Future work
 
 This package could be extended to collect all the data needed to populate the SQL database, so we can stop using =org-roam-db-sync= altogether.
@@ -43,4 +42,4 @@ We "just" have to design a better regexp.  As it is, it just grabs titles and ID
 
 ** Thanks
 
-Inspired by conversations with [[https://github.com/rtrppl/orgrr]]'s maker :)
+Inspired by conversations with [[https://github.com/rtrppl/orgrr][orgrr]]'s maker :)
