--- a/README.org
+++ b/README.org
@@ -38,7 +38,7 @@ Install [[https://github.com/BurntSushi/ripgrep][ripgrep]] on your computer.  Th
 
 This package could be extended to collect all the data needed to populate the SQL database, so we can stop using =org-roam-db-sync= altogether.
 
-We "just" have to design a better regexp.  As it is, it just grabs titles and IDs, which satisfies the current purpose.  Totally replacing =org-roam-db-sync= may impose some limitations on org-roam's hackability, but perhaps that's worth it.
+We "just" have to design a better regexp.  As it is, it just grabs titles and IDs, which satisfies the current purpose.  Totally replacing =org-roam-db-sync= may limit org-roam's hackability, but perhaps that's worth it.
 
 ** Thanks
 
