--- a/README.org
+++ b/README.org
@@ -42,4 +42,4 @@ We "just" have to design a better regexp.  As it is, it just grabs titles and ID
 
 ** Thanks
 
-Inspired by Mastodon conversations with the [[https://github.com/rtrppl/orgrr][orgrr]] author :)
+Inspired by [[https://emacs.ch/@laotang/112139767286378879][a Mastodon conversation]] with the [[https://github.com/rtrppl/orgrr][orgrr]] author :)
