--- a/README.org
+++ b/README.org
@@ -18,9 +18,9 @@ This package provides alternatives to common commands:
 - =org-roam-node-find= -- use =quickroam-find=
 - =org-roam-node-insert= -- use =quickroam-insert=
 
-They don't look up the org-roam DB at all, just rely on ripgrep.  They're fast, solving problem #1, and they always find up-to-date hits, so you can now set =org-roam-db-update-on-save= to nil to solve problem #2.
+They don't look up the org-roam DB at all, just rely on ripgrep.  They're fast, fixing problem #1, and they always find up-to-date hits, which means you can set =org-roam-db-update-on-save= to nil to fix problem #2.
 
-If you do the #2 fix, be aware that backlinks do not update until you manually run =M-x org-roam-db-sync RET=.
+If you do the #2 fix, be aware that backlinks won't update until you run =M-x org-roam-db-sync RET=.
 
 ** Setup
 
@@ -46,6 +46,7 @@ This package is a proof-of-concept that ripgrep can collect part of the data nee
     - We could satisfice with a poor-man's backlinks buffer by letting it just show, say, 2 lines above and below each link, reminiscent of a diff output.
     - Another option is to /cache the backlinks/ as a property or drawer(!) like [[https://github.com/toshism/org-super-links][org-super-links]] does.
 
+
 - *The outline path*
   - What it's used for: https://fosstodon.org/@nickanderson/112249581810196258
 
@@ -56,9 +57,15 @@ All the data org-roam collects are specified in [[https://github.com/org-roam/or
 
 Two ways forward:
 
-1. Keep parsing Org syntax, but do it faster.  Maybe rewrite =org-roam-db-update-file= to use [[https://github.com/alphapapa/org-ql][org-ql]]?
+1. Don't parse Org syntax, and compromise on the kinds of data to collect.
 
-2. Don't parse Org syntax, and compromise on the kinds of data to collect.
+2. Keep parsing Org syntax, but do it faster.
+   - Maybe rewrite =org-roam-db-update-file= to use [[https://github.com/alphapapa/org-ql][org-ql]]?
+   - View the SQLite database as a first-order cache, and create a second-order cache consisting of the org-super-links approach, mentioned above.
+     - It's a powerful concept!  Write directly into property drawers everything that's impossible to write a regexp for, so you can later just grep the cached values.
+       - Ripgrep would be sufficient to populate the SQLite database from scratch.  Or we could discard the database.
+       - Of course, it relies on wrapping many user commands: let's say you record the subtree's outline path as a property =:OLP:=, and every time you indent or outdent a subtree, some advice would update this property.
+         - In real life, we can't trust that 100% of the time, so it'd be good to have a command to validate all the properties in all files.  The win is that you don't need to run such code on /every/ =(org-roam-db-sync 'force)=, you'd just run it as a kind of linter once a month!
 
 ** Thanks
 
