--- a/README.org
+++ b/README.org
@@ -40,16 +40,16 @@ Install [[https://github.com/BurntSushi/ripgrep][ripgrep]] on your computer.  Th
 
 This package is a proof-of-concept that ripgrep can collect part of the data needed by the org-roam DB.  However, simple regexps cannot collect all that's needed.  Some challenges:
 
-- *The outline path*
-  - What it's used for: https://fosstodon.org/@nickanderson/112249581810196258
-
 - *TODO/DONE keywords*
   - Need awareness of buffer-local =#+seq_todo= settings
+
+- *The outline path*
+  - What it's used for: https://fosstodon.org/@nickanderson/112249581810196258
 
 - *Backlink context*: the name of the subtree-node in which a link is found
   - Pretty important since backlinks butter our bread, right?
   - If we mandated the rule of "one file, one node" like zk/orgrr/denote do, we'd only need to grab the file title.  But that's not why we're here.  Org-roam's nested nodes are the best thing since sliced bread, but they need us to parse the Org syntax.
-    - We could satisfice with a poor-man's backlinks buffer by letting it just show, say, 2 lines above and below each link, reminiscent of a diff output.
+    - One option is to satisfice with a poor-man's backlinks buffer by letting it just show, say, 2 lines above and below each link, reminiscent of a diff output.
     - Another option is to /cache the backlinks/ as a property or drawer(!) like [[https://github.com/toshism/org-super-links][org-super-links]] does.
 
 
@@ -62,10 +62,11 @@ Two ways forward:
 2. Keep parsing Org syntax, but do it faster.
    - Maybe rewrite =org-roam-db-update-file= to use [[https://github.com/alphapapa/org-ql][org-ql]]?
    - View the SQLite database as a first-order cache, and create a second-order cache consisting of the org-super-links approach, mentioned above.
-     - It's a powerful concept!  Record directly into property drawers everything that's impossible to write a regexp for, so you can later just grep the cached values.
-       - Now syncing the DB has been reduced to a simple grep job.  No lines of Org code needs to run.  We could even get rid of the database since ripgrep-based "queries" would likely be fast too.
-       - Of course, it relies on wrapping many user commands: let's say you record the subtree's outline path as a property =:OLP:=, and every time you indent or outdent a subtree, some advice would update this property.
-         - In real life, we can't trust that 100% of the time, so it'd be good to have a command to validate all the properties in all files.  The win is that you don't need to run such code on /every/ =(org-roam-db-sync 'force)=, you'd just run it as a kind of linter once a month!
+     - It's a powerful concept!  Record directly into property drawers everything that's /impossible to write a regexp for/, so you can later just grep the cached values.
+       - Now syncing the DB has been reduced to a job for grep.  No lines of Org code need to run.
+         -  We could even get rid of the DB since ripgrep-based "queries" would likely be fast enough.
+       - Of course, this relies on wrapping many user commands: let's say you record the subtree's outline path as a property =:OLP:=, and every time you indent or outdent a subtree, some advice automatically updates this property.
+         - In real life, we can't trust that 100% of the time, so it'd be good to have a command to validate all the properties in all files.  It's still a win because you don't need to run such code on /every/ =(org-roam-db-sync 'force)=, you'd just run it as a kind of linter once a month!
 
 ** Thanks
 
