--- a/README.org
+++ b/README.org
@@ -68,9 +68,11 @@ Three ways forward:
      - Now syncing the DB has been reduced to a job for grep.  No lines of Org code need to run.
        - We could even get rid of the DB, since ripgrep-based "queries" would be fast enough.
          - But, SQL queries are a handy tool for package devs, so either we keep the DB or we make sure that all the same things can be done in [[https://github.com/alphapapa/org-ql][org-ql]].  In fact, alphapapa has expressed interest in giving org-ql a SQL backend, so it looks like a promising place for some synergy to happen!
-           - Anyway, it costs us nothing to keep the DB.  If worried about stale data, we can just rebuild it much more often.
+         - Anyway, it costs us nothing to keep the DB.  If worried about stale data, we can just rebuild it much more often.
      - Caveat: we must wrap many user commands.  Let's say you record the subtree's outline path as a property =:CACHED_OLPATH:=, and every time you indent or outdent a subtree, some advice automatically updates this property.
        - In real life, we can't trust that 100% of the time, so it'd be good to have a command to validate all the properties in all files.  It's still a win because you don't need to run such code on /every/ =(org-roam-db-sync 'force)=, you'd just run it as a kind of linter once a month!
+       - If you wanted to cache a ton of data, you could compress it by gzip and put the base64-encoded string on a single property =:ROAM_METADATA:= or some such.
+   - An alternative, I guess may work too: keep a table in the SQLite database for every subtree, and avoid using =org-roam-clear-file= so often.
 
 ** Thanks
 
