--- a/README.org
+++ b/README.org
@@ -31,12 +31,14 @@ Install [[https://github.com/BurntSushi/ripgrep][ripgrep]] on your computer.  Th
   :straight (quickroam :type git :host github :repo "meedstrom/quickroam")
   :defer t)
 
-(add-hook 'org-mode-hook #'quickroam-enable-cache) ;; optional
+(add-hook 'org-mode-hook #'quickroam-enable)
 (global-set-key (kbd "<f2> f") #'quickroam-find) ;; or whatever key you use
 (global-set-key (kbd "<f2> i") #'quickroam-insert)
 #+end_src
 
 ** Future work
+
+(2024-04-23: quickroam has hit version 1.0 and is not expected to change.  I expect no bugs as it is very simple.  Now I dogfood a featureful spin-off: [[https://github.com/meedstrom/org-node][org-node]])
 
 This package is a proof-of-concept that ripgrep can collect part of the data needed by the org-roam DB.  However, simple regexps cannot collect all that's needed.  Some challenges:
 
