--- a/README.org
+++ b/README.org
@@ -31,7 +31,7 @@ Install [[https://github.com/BurntSushi/ripgrep][ripgrep]] on your computer.  Th
   :straight (quickroam :type git :host github :repo "meedstrom/quickroam")
   :defer t)
 
-(add-hook 'org-mode-hook #'quickroam-enable)
+(add-hook 'org-mode-hook #'quickroam-enable-cache)
 (global-set-key (kbd "<f2> f") #'quickroam-find) ;; or whatever key you use
 (global-set-key (kbd "<f2> i") #'quickroam-insert)
 #+end_src
