--- a/README.org
+++ b/README.org
@@ -33,52 +33,29 @@ Install [[https://github.com/BurntSushi/ripgrep][ripgrep]] on your computer.  Th
 #+begin_src elisp
 (use-package quickroam
   :straight (quickroam :type git :host github :repo "meedstrom/quickroam")
-  :defer t)
+  :after org
+  :config (quickroam-mode))
 
-(add-hook 'org-mode-hook #'quickroam-enable-cache)
 (global-set-key (kbd "<f2> f") #'quickroam-find) ;; or whatever key you use
 (global-set-key (kbd "<f2> i") #'quickroam-insert)
 #+end_src
 
-** Future work
+* Future work
 
-(2024-04-23: quickroam has hit version 1.0 and is not expected to change.  Now I dogfood a spin-off with more features: [[https://github.com/meedstrom/org-node][org-node]]!)
+(2024-04-23: quickroam has hit version 1.0 and is NOT EXPECTED TO CHANGE.  Now I dogfood a spin-off with more features: [[https://github.com/meedstrom/org-node][org-node]]!)
 
 This package is a proof-of-concept that ripgrep can collect part of the data needed by the org-roam DB.  However, simple regexps cannot collect all that's needed.  Some challenges:
-
 - *TODO/DONE keywords*
-  - Need awareness of buffer-local =#+seq_todo= settings
+  - Need awareness of buffer-local =#+seq_todo= settings -- good luck doing that with grep
 
 - *The outline path*
   - What it's used for: https://fosstodon.org/@nickanderson/112249581810196258
+  - Can be calculated, but it requires [[https://github.com/meedstrom/org-node/blob/c2d43155d9fd4e96a97df28d0411eb95ce2bfa1a/org-node-cache.el][a lot more code]]
 
-- *Backlink context*: the name of the subtree-node in which a link is found
-  - Pretty important since backlinks butter our bread, right?
-  - If we mandated the rule of "one file, one node" like zk/orgrr/denote do, we'd only need to grab the file title.  But that's not why we're here.  Org-roam's nested nodes are the best thing since sliced bread, but they need us to parse the Org syntax.
+- *Backlinks*: requires knowing the name of the subtree-node in which a link is found
+  - If we mandated the rule of "one file, one node" like zk/orgrr/denote do, we'd only need to grab the file title.  But that's not why we're here.  We like subtrees.
     - One option is to satisfice with a poor-man's backlinks buffer by letting it just show, say, 2 lines above and below each link, reminiscent of a diff output.
-    - Another option is to /cache the backlinks/ as a property or drawer(!) like [[https://github.com/toshism/org-super-links][org-super-links]] does.
-
-
-You can see all the data org-roam collects in [[https://github.com/org-roam/org-roam/blob/v2.2.2/org-roam-db.el#L229][org-roam-db--table-schemata]].
-
-Three ways forward:
-
-1. Don't parse Org syntax, and compromise on the kinds of data to collect.
-
-2. Parse Org syntax, but do it faster.
-   - Maybe rewrite =org-roam-db-update-file= to scan the buffer with [[https://github.com/alphapapa/org-ql][org-ql]]?  Don't know if it'd be faster.
-
-3. Parse Org syntax ahead-of-time.
-   - View the SQLite database as a first-order cache, and create a second-order cache consisting of the org-super-links approach mentioned earlier.
-   - It's a powerful concept!  Record directly into property drawers everything that's /impossible to write a regexp for/, so you can later just grep the values.
-     - Now syncing the DB has been reduced to a job for grep.  No lines of Org code need to run.
-       - We could even get rid of the DB, since ripgrep-based "queries" would be fast enough.
-         - But, SQL queries are a handy tool for package devs, so either we keep the DB or we make sure that all the same things can be done in [[https://github.com/alphapapa/org-ql][org-ql]].  In fact, alphapapa has expressed interest in giving org-ql a SQL backend, so it looks like a promising place for some synergy to happen!
-         - Anyway, it costs us nothing to keep the DB.  If worried about stale data, we can just rebuild it much more often.
-     - Caveat: we must wrap many user commands.  Let's say you record the subtree's outline path as a property =:CACHED_OLPATH:=, and every time you indent or outdent a subtree, some advice automatically updates this property.
-       - In real life, we can't trust that 100% of the time, so it'd be good to have a command to validate all the properties in all files.  It's still a win because you don't need to run such code on /every/ =(org-roam-db-sync 'force)=, you'd just run it as a kind of linter once a month!
-       - If you wanted to cache a ton of data, you could compress it by gzip and put the base64-encoded string on a single property =:ROAM_METADATA:= or some such.
-   - An alternative, I guess may work too: keep a table in the SQLite database for every subtree, and avoid using =org-roam-clear-file= so often.
+    - Another option is to /cache the backlinks/ as a property or drawer(!) like [[https://github.com/toshism/org-super-links][org-super-links]] does.  And then just let a grep job collect those backlinks.
 
 ** Thanks
 
